Fix original images src

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <img class="avatar distorted" src="img2.png" alt="...">
     </div>
     <div>
-      <img class="original proportioned" src="img1" alt="">
-      <img class="original distorted" src="img2" alt="">
+      <img class="original proportioned" src="img1.png" alt="">
+      <img class="original distorted" src="img2.png" alt="">
     </div>
   </body>
 </html>
